--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,8 @@ dependencies {
 
     implementation 'com.github.Jawnnypoo:PhysicsLayout:2.1.0'
 
+    implementation 'com.github.recruit-lifestyle:WaveSwipeRefreshLayout:1.6'
+
 
 
 }
